tket-hseries/src/llvm/snapshots/tket_hseries__llvm__utils__test__emit_utils_codegen@llvm14_1.snap
---
source: tket-hseries/src/llvm/utils.rs
expression: mod_str
---
; ModuleID = 'test_context'
source_filename = "test_context"

define i64 @_hl.main.1() {
alloca_block:
  br label %entry_block

entry_block:                                      ; preds = %alloca_block
  %shot = call i64 @get_current_shot()
  ret i64 %shot
}

declare i64 @get_current_shot()
